[package]
name = "local-latency-slider"
version = "2.2.0"
authors = ["blu-dev", "saad-script"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
ninput = { git = "https://github.com/blu-dev/ninput" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
libc-nnsdk = { git = "https://github.com/ultimate-research/libc-nnsdk" }
serde = { version = "1.0.208", features = ["derive"] }
bincode = "1.3.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
